# BeeZ80

./: CMakeLists.txt  LEGAL.md  README.md  beez80-tests.cpp  beez80.cpp  beez80.h  beez80decrypt.h  msys_dist.sh
BeeZ80/: CMakeLists.txt  beez80.cpp  beez80.h
tests/: TEST.ASM  TEST.COM
tools/: msys_dist.sh
